--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-    <header class="bg-[#124252] lg:max-w-[1200px] m-auto flex flex-col">
-        <nav class="flex justify-between items-center py-4">
+    <header class="bg-[#124252] gap-10  flex flex-col">
+        <nav class="flex justify-between m-auto lg:max-w-[1200px] max-w-[350px] w-[100%] items-center py-4">
             <div>
                 <img src="./images/Group 44.png" alt="">
             </div>
-<ul class="flex gap-5 text-[#A1B5BB]">
+<ul class="lg:flex hidden gap-5 text-[#A1B5BB]">
     <li class="underline">Home</li>
     <li>About</li>
     <li>Service</li>
@@ -23,11 +23,26 @@
     <button class="bg-[#145E76] px-5 py-3 rounded-[8px] text-white">Contact</button>
 </div>
         </nav>
-        
-        <section>
-            <aside>
 
+        <section class="flex lg:flex-row flex-col justify-between w-[100%] max-w-[350px] lg:max-w-[1200px] m-auto items-center">
+            <aside class="lg:w-[40%] w-[100%] flex flex-col text-white gap-4">
+                <div class="flex">
+                    <p class="px-3 py-2 rounded-[30px] bg-[#094556]">Hey, I’m Musa</p>
+                </div>
+                <h1 class="text-[45px] font-bold">Building Digital <br>
+    Products, Brands <br>
+        & Experience.</h1>
+<p class="text-[#849499]">A Product Design and Visual Designer in SF I”m Specialize in
+UI/UX, Responsive web design, and visual Development. </p>
+<div class="flex items-center gap-6">
+    <button class="bg-[#FFA63A] px-3 py-2 rounded-[20px]">Hire Me</button>
+    <p class="text-[#B6CDD4]">My Work</p>
+</div>
             </aside>
+            <div class="relative ">
+                <img src="./images/image (9).png">
+                <img src="./images/Group 4.png" class="absolute top-[200px] -right-[70px] lg:block hidden">
+            </div>
         </section>
     </header>
 </body>
