--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 </div>
         </nav>
 
-        <section class="flex lg:flex-row flex-col justify-between w-[100%] max-w-[350px] lg:max-w-[1200px] m-auto items-center">
+        <section class="flex pb-[200px] lg:flex-row flex-col justify-between w-[100%] max-w-[350px] lg:max-w-[1200px] m-auto items-center">
             <aside class="lg:w-[40%] w-[100%] flex flex-col text-white gap-4">
                 <div class="flex">
                     <p class="px-3 py-2 rounded-[30px] bg-[#094556]">Hey, I’m Musa</p>
@@ -44,6 +44,79 @@ UI/UX, Responsive web design, and visual Development. </p>
                 <img src="./images/Group 4.png" class="absolute top-[200px] -right-[70px] lg:block hidden">
             </div>
         </section>
+
+        <div class="w-[100%] max-w-[350px] flex shadow-[0px_0px_5px_10px_#0000000F] flex-col m-auto top-[950px] lg:top-[850px] left-[20px] lg:left-[150px] h-auto lg:h-[270px] rounded-[15px] bg-white absolute lg:max-w-[1200px]">
+            <div class="w-[80%] m-auto flex-col flex gap-3">
+                <h1 class="text-[#265A6A] text-[30px] font-bold lg:text-start text-center">STATISTIC</h1>
+                <div class="flex justify-between lg:flex-row flex-col">
+                    <article class="text-[#08546C] font-bold flex flex-col items-center">
+                        <h1 class="text-[40px]">300+</h1>
+                        <p>Project Delivery</p>
+                    </article>
+                    <article class="text-[#08546C] font-bold flex flex-col items-center">
+                        <h1 class="text-[40px]">8</h1>
+                        <p>Years Experience</p>
+                    </article>
+                    <article class="text-[#08546C] font-bold flex flex-col items-center">
+                        <h1 class="text-[40px]">16</h1>
+                        <p>Awards</p>
+                    </article>
+                    <article class="text-[#08546C] font-bold flex flex-col items-center">
+                        <h1 class="text-[40px]">70+</h1>
+                        <p>Happy Clients</p>
+                    </article>
+                </div>
+            </div>
+        </div>
+
     </header>
+
+        <main>
+            <section class="w-[100%] mt-[300px] lg:mt-[200px] gap-5 max-w-[350px] m-auto lg:max-w-[1200px] flex flex-col">
+                    <p class="text-center underline text-[#265A6A] font-[Schoolbell]">Services</p>
+                    <h1 class="text-[#08546C] text-[35px] font-bold text-center">Building Digital Product <br>
+                        With Better Experience</h1> 
+                        <div class="flex gap-4 lg:flex-row flex-col">
+                            <article class="flex flex-col w-[100%] lg:w-[25%] px-7 py-3 gap-5 shadow-[0px_0px_20px_10px_#0000000D]">
+                                <div>
+                                    <img src="./images/Group 15.png" alt="">
+                                </div>
+                                    <h1 class="text-[25px] text-[#0F1221] font-bold">UI/UX Design</h1>
+                                    <p class="text-[#696969]">I’ve created a user interface
+                                        and user experience with
+                                        some proccess and method.</p>
+                            </article>
+                            <article class="flex flex-col bg-[#08546C] w-[100%] lg:w-[25%] px-7 py-3 gap-5 shadow-[0px_0px_20px_10px_#0000000D]">
+                                <div>
+                                    <img src="./images/Group 15 (1).png" alt="">
+                                </div>
+                                    <h1 class="text-[25px] text-white font-bold">UI/UX Design</h1>
+                                    <p class="text-[#B2BBBD]">I’ve created a user interface
+                                        and user experience with
+                                        some proccess and method.</p>
+                            </article>
+                            <article class="flex flex-col w-[100%] lg:w-[25%] px-7 py-3 gap-5 shadow-[0px_0px_20px_10px_#0000000D]">
+                                <div>
+                                    <img src="./images/Group 15 (3).png" alt="">
+                                </div>
+                                    <h1 class="text-[25px] text-[#0F1221] font-bold">Visual Branding</h1>
+                                    <p class="text-[#696969]">I’ve created a user interface
+                                        and user experience with
+                                        some proccess and method.</p>
+                            </article>
+                            <article class="flex flex-col w-[100%] lg:w-[25%] px-7 py-3 gap-5 shadow-[0px_0px_20px_10px_#0000000D]">
+                                <div>
+                                    <img src="./images/Group 15 (2).png" alt="">
+                                </div>
+                                    <h1 class="text-[25px] text-[#0F1221] font-bold">App Development</h1>
+                                    <p class="text-[#696969]">I’ve created a user interface
+                                        and user experience with
+                                        some proccess and method.</p>
+                            </article>
+                        </div>
+            </section>
+
+        </main>
+
 </body>
 </html>
