--- a/src/index.html
+++ b/src/index.html
@@ -116,6 +116,73 @@ UI/UX, Responsive web design, and visual Development. </p>
                         </div>
             </section>
 
+
+            <section class="lg:max-w-[1200px] max-w-[350px] w-[100%] m-auto flex flex-col gap-[60px] mt-[150px]">
+                <div class="flex flex-col gap-3">
+                    <h1 class="text-[#08546C] text-[35px] font-bold">Featured My Portfolio</h1>
+                    <p class="text-[#757575] text-[18px]">Explore some of my latest website projects. Non suscipit ex blandit <br>
+                        vitae. Pellentesque vel urna id massa sagittis luctus Fusce iaculis.</p>
+                </div>
+
+                <div class="flex lg:flex-row flex-col justify-between w-[100%] lg:gap-0 gap-[50px]">
+                    <article class="lg:w-[45%] w-[100%] flex flex-col gap-4">
+                        <div>
+                            <img src="./images/dribbble mockup 1.png" alt="">
+                        </div>
+                        <h1 class="text-[#08546C] text-[30px] font-bold">Website Design</h1>
+                        <p class="text-[#757575] text-[18px]">Our website designers have penetrated the mysteries of <br>
+                             emotional response to color, image,  and eye-tracking. <br>
+                                  Every element is geared to create maximum appeal.</p>
+                            <div class="flex items-center gap-3">
+                                <h3 class="text-[#08546C]">Read Case Study</h3>
+                                <img src="./images/Group 29.png" alt="">
+                            </div>
+                    </article>
+                    <article class="lg:w-[45%] w-[100%] flex flex-col gap-4">
+                        <div>
+                            <img src="./images/dribbble mockup 1 (1).png" alt="">
+                        </div>
+                        <h1 class="text-[#08546C] text-[30px] font-bold">Product Design</h1>
+                        <p class="text-[#757575] text-[18px]">Our website designers have penetrated the mysteries of <br>
+                             emotional response to color, image,  and eye-tracking. <br>
+                                  Every element is geared to create maximum appeal.</p>
+                            <div class="flex items-center gap-3">
+                                <h3 class="text-[#FFA800]">Read Case Study</h3>
+                                <img src="./images/Group 29 (1).png" alt="">
+                            </div>
+                    </article>
+                </div>
+                <div class="flex justify-between lg:flex-row flex-col w-[100%] lg:gap-0 gap-[50px]">
+                    <article class="lg:w-[45%] w-[100%] flex flex-col gap-4">
+                        <div>
+                            <img src="./images/dribbble mockup 1 (2).png" alt="">
+                        </div>
+                        <h1 class="text-[#08546C] text-[30px] font-bold">App Design</h1>
+                        <p class="text-[#757575] text-[18px]">Our website designers have penetrated the mysteries of <br>
+                             emotional response to color, image,  and eye-tracking. <br>
+                                  Every element is geared to create maximum appeal.</p>
+                            <div class="flex items-center gap-3">
+                                <h3 class="text-[#08546C]">Read Case Study</h3>
+                                <img src="./images/Group 29.png" alt="">
+                            </div>
+                    </article>
+                    <article class="lg:w-[45%] w-[100%] flex flex-col gap-4">
+                        <div>
+                            <img src="./images/dribbble mockup 1 (3).png" alt="">
+                        </div>
+                        <h1 class="text-[#08546C] text-[30px] font-bold">DashBoard Design</h1>
+                        <p class="text-[#757575] text-[18px]">Our website designers have penetrated the mysteries of <br>
+                             emotional response to color, image,  and eye-tracking. <br>
+                                  Every element is geared to create maximum appeal.</p>
+                            <div class="flex items-center gap-3">
+                                <h3 class="text-[#08546C]">Read Case Study</h3>
+                                <img src="./images/Group 29.png" alt="">
+                            </div>
+                    </article>
+                </div>
+
+            </section>
+
         </main>
 
 </body>
