--- a/src/index.html
+++ b/src/index.html
@@ -183,6 +183,28 @@ UI/UX, Responsive web design, and visual Development. </p>
 
             </section>
 
+            <section class="bg-[#084F64] w-[100%] lg:h-[600px] items-center flex">
+                <div class="lg:max-w-[1200px] max-w-[350px] m-auto flex lg:flex-row lg:py-0 py-5 flex-col-reverse w-[100%] items-center ">
+                    <img src="./images/Group 36.png" alt="">
+                    <aside class="flex flex-col gap-5 w-[80%]  lg:w-[40%] text-white">
+                        <div>
+                            <img src="./images/Group.png" alt="">
+                        </div>
+                            Managed Services team acts like an extension of yours to expertly
+respond to any and all feedback, and scan and evaluate reviews for
+any legal concerns, profanity or slander, or any policy violations of <br> <br>
+
+community and content. Services, analytics and reports can be
+customized by location, project or initiative.
+                    <p class="text-[#AABFC6]">Mohammad Musa  - CEO at Company</p>
+                    <div>
+                        <img src="./images/Group 34.png" alt="">
+                    </div>
+                    </aside>
+
+                </div>
+            </section>
+
         </main>
 
 </body>
