--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@ UI/UX, Responsive web design, and visual Development. </p>
 
     </header>
 
-        <main>
+        <main class="flex flex-col gap-[100px]">
             <section class="w-[100%] mt-[300px] lg:mt-[200px] gap-5 max-w-[350px] m-auto lg:max-w-[1200px] flex flex-col">
                     <p class="text-center underline text-[#265A6A] font-[Schoolbell]">Services</p>
                     <h1 class="text-[#08546C] text-[35px] font-bold text-center">Building Digital Product <br>
@@ -205,7 +205,49 @@ customized by location, project or initiative.
                 </div>
             </section>
 
+            <section class="flex lg:flex-row flex-col w-[100%] gap-[70px] py-[60px] border-b-[1px] border-black lg:max-w-[1200px] max-w-[350px] m-auto">
+                <article class="lg:w-[50%] w-[100%] flex flex-col gap-4">
+                    <div>
+                        <img src="./images/Rectangle 18.png" alt="">
+                    </div>
+                    <h1 class="text-[#08546C] text-[35px] px-3">How This Agency Helped My <br>
+Business And Career Journey?</h1>
+                        <p class="text-[#757575] px-3">A successful marketing plan relies heavily on the pulling-power of advertising
+copy. writing result-oriented ad copy is dificult, as it must appeal to, entice,
+and onviced consumers tp action.</p>
+<div class="flex lg:flex-row flex-col justify-between px-3 items-center text-[#757575]">
+    <div class="flex gap-[30px] items-center ">
+
+        <p>PUBLISHED IN</p>
+        <p class="text-[#FFA800] bg-[#FFF8EB] px-3 py-2 rounded-[20px]">Marketing</p>
+        <p>Category</p>
+    </div>
+    <div>
+        <p>05 jun, 2021</p>
+    </div>
+</div>
+                </article>
+
+                <aside class="lg:w-[30%] w-[100%] flex flex-col gap-[100px]">
+                    <div class="flex flex-col gap-[60px]">
+                        <h1 class="text-[#08546C] text-[35px] font-bold">My Blog <br>
+                        And News</h1>
+                        <p class="text-[#757575]">If It’s abillboard ad, you’ll need a super
+catchy headline due to the speed at
+which people will pass.</p>
+<div>
+    <button class="bg-[#FFA63A] text-white px-4 py-2 rounded-[20px]">Go To The Blog</button>
+</div>
+                    </div>
+                    <div>
+                        <img src="./images/Group 41.png" alt="">
+                    </div>
+                </aside>
+
+            </section>
         </main>
+
+
 
 </body>
 </html>
