--- a/src/index.html
+++ b/src/index.html
@@ -205,27 +205,27 @@ customized by location, project or initiative.
                 </div>
             </section>
 
-            <section class="flex lg:flex-row flex-col w-[100%] gap-[70px] py-[60px] border-b-[1px] border-black lg:max-w-[1200px] max-w-[350px] m-auto">
+            <section class="flex lg:flex-row flex-col  w-[100%] gap-[70px] py-[60px] border-b-[1px] border-black lg:max-w-[1200px] max-w-[350px] m-auto">
                 <article class="lg:w-[50%] w-[100%] flex flex-col gap-4">
                     <div>
                         <img src="./images/Rectangle 18.png" alt="">
                     </div>
                     <h1 class="text-[#08546C] text-[35px] px-3">How This Agency Helped My <br>
-Business And Career Journey?</h1>
+                Business And Career Journey?</h1>
                         <p class="text-[#757575] px-3">A successful marketing plan relies heavily on the pulling-power of advertising
-copy. writing result-oriented ad copy is dificult, as it must appeal to, entice,
-and onviced consumers tp action.</p>
-<div class="flex lg:flex-row flex-col justify-between px-3 items-center text-[#757575]">
-    <div class="flex gap-[30px] items-center ">
+                  copy. writing result-oriented ad copy is dificult, as it must appeal to, entice,
+                     and onviced consumers tp action.</p>
+                <div class="flex lg:flex-row flex-col justify-between px-3 items-center text-[#757575]">
+             <div class="flex gap-[30px] items-center ">
 
         <p>PUBLISHED IN</p>
         <p class="text-[#FFA800] bg-[#FFF8EB] px-3 py-2 rounded-[20px]">Marketing</p>
         <p>Category</p>
-    </div>
-    <div>
-        <p>05 jun, 2021</p>
-    </div>
-</div>
+                </div>
+              <div>
+                  <p>05 jun, 2021</p>
+                </div>
+                </div>
                 </article>
 
                 <aside class="lg:w-[30%] w-[100%] flex flex-col gap-[100px]">
@@ -247,7 +247,49 @@ which people will pass.</p>
             </section>
         </main>
 
+            <footer class="w-[100%] lg:flex-row flex-col flex justify-evenly lg:max-w-[1200px] max-w-[350px] lg:gap-0 gap-8 m-auto py-[80px]">
+                <article class="flex flex-col gap-5 lg:text-start text-center items-center lg:items-start">
+                    <div>
+                        <img src="./images/Group 45.png" alt="">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur <br>
+adipiscing elit. Lectus mattis nunc <br>
+aliquam tincidunt est non.</p>
+<div>
+    <img src="./images/Group 48.png" alt="">
+</div>
+                </article>
 
+                <aside class="text-[#787878] flex lg:flex-row flex-col lg:text-start text-center lg:gap-[100px]">
+                    <article class="flex flex-col gap-2">
+                        <h1 class="text-[#08546C] text-[25px]">Pages</h1>
+                        <ul>
+                            <li>Home</li>
+                            <li>About</li>
+                            <li>Service</li>
+                            <li>Portfolio</li>
+                            <li>Blog</li>
+                        </ul>
+                    </article>
+                    <article class="flex flex-col gap-2">
+                        <h1 class="text-[#08546C] text-[25px]">Services</h1>
+                        <ul>
+                            <li>Web Design</li>
+                            <li>App Design</li>
+                            <li>Dashboard</li>
+                            <li>Illustration</li>
+                            <li>Development</li>
+                        </ul>
+                    </article>
+                    <article class="flex flex-col gap-2">
+                        <h1 class="text-[#08546C] text-[25px]">Contact</h1>
+                        <p>+00 88 999 888 22</p>
+                        <p>example@gmail.com</p>
+                        <p>www.portfolio.com</p>
+                        <p>44, Housing State, 3200</p>
+                    </article>
+                </aside>
+            </footer>
 
 </body>
 </html>
